--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^2.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
